[1/2][ourProject] debug in new development enviroment